tests/valid/module/use_alias_core_option_type_enum.facet
use core::option::Option as Maybe;

fn main() -> affine Maybe<affine isize> {
  Maybe<affine isize>::Some(1)
}
