tests/invalid/module/private_module_public_item.facet
pub mod outer {
  mod api {
    pub fn id(x: affine isize) -> affine isize { x }
  }
}

fn main() -> affine isize {
  (outer::api::id 1)
}
